--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
-/*////////////////////////////////////////////////////////////////////////
-Table of Contents:
+/*@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;700;900&display=swap');!//////////////////////////////////////////////////////////////////////*/
+/*Table of Contents:
     1. Global Styles
     2. Typografie
     3. Areas
@@ -10,11 +10,22 @@ Table of Contents:
         3.5 Footer
 ////////////////////////////////////////////////////////////////////////*/
 
-
+/* grijs #899CA0 en donkergroen #1C2B32 */
 
 /*////////////////////////
     1. Global Styles
 ////////////////////////*/
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  color: #1C2B32;
+}
+
 
 
 
@@ -27,6 +38,77 @@ Table of Contents:
 /*////////////////////////
     3. Areas
 ////////////////////////*/
+.header-domainshop {
+  background-image: url("../assets/images/mountains.jpg");
+  background-size: cover;
+  background-position: top;
+}
+
+.header-elements {
+  padding: 150px 0 400px 0;
+  margin: 0 auto;
+  max-width: 1000px;
+  text-align: center;
+}
+
+h1.header-title {
+  font-size: 80px;
+  font-weight:  700;
+
+}
+
+h2.header-slogan {
+  font-size: 15px;
+  font-weight: 400;
+  text-align: center;
+  margin-top: -5px;
+  margin-bottom: 20px;
+}
+
+.input-domain-name {
+  font-size: 15px;
+  border: solid 2px #1C2B32;
+  width: 250px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-indent: 0px;
+  border-bottom-left-radius: 30px;
+  border-top-left-radius: 30px;
+  text-align: center;
+  background: transparent;
+  outline: none;
+}
+
+.input-domain-name::placeholder {
+  color: #1C2B32;
+  font-size: 15px;
+  text-indent: -18px;
+}
+
+.input-domain-name:focus::placeholder {
+  color: transparent;
+
+}
+
+.input-domain-name:hover {
+  outline-color: white;
+
+}
+
+
+.button-domain-name {
+  font-size: 15px;
+  width: 200px;
+  border: solid 2px #1C2B32;
+  background: #1C2B32;
+  color: white;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom-right-radius: 30px;
+  border-top-right-radius: 30px;
+  margin-left: -8px;
+  outline: none;
+}
 
 
 
