Small cosmetic adjustment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,13 +8,17 @@
         3.3 Support
         3.4 Faq
         3.5 Footer
-////////////////////////////////////////////////////////////////////////*/
+
+ /**!///////////////////////////////////////////////////////////////////////!*/
 
   /* grijs #899CA0 en donkergroen #1C2B32 */
 
 /*////////////////////////
     1. Global Styles
 ////////////////////////*/
+
+
+
 * {
   box-sizing: border-box;
   margin: 0;
